--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
                 <div class="review-text">
                   <p class="review-name">Дар'я Мельник</p>
-                  <p style="font-size: 1.5rem;">Щойно відвідавши цей ресторан, моє враження подібно казці. Чудова атмосфера, приємний інтер'єр та неймовірно смачна їжа зробили мій вечір надзвичайно приємним. Великий вибір страв задовольнив навіть найвибагливіших гурманів, а їхні десерти — справжнім шедеврами кулінарного мистецтва. Рекомендую цей ресторан усім, хто цінує якість та комфорт у їжі!</p>
+                  <p style="font-size: 1.5rem;">Щойно відвідавши цей ресторан, моє враження подібно казці. Чудова атмосфера, приємний інтер'єр та неймовірно смачна їжа зробили мій вечір надзвичайно приємним. Великий вибір страв задовольнив навіть найвибагливіших гурманів, а їхні десерти — справжні шедеври кулінарного мистецтва. Рекомендую цей ресторан усім, хто цінує якість та комфорт у їжі!</p>
                 </div>
               </div>
             </div>
